--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.google.com/specimen/Poppins');
-@media screen and (max-width:1440px) and (min-width:376px) {
+@media screen and (max-width:1440px) and (min-width:976px) {
 body{
     background-color: hsl(0, 0%, 98%);
     width:100%;
@@ -91,7 +91,7 @@ h1:nth-of-type(2){
     margin-top: 20px;
 }
 }
-@media screen and (max-width:375px) {
+@media screen and (min-width:375px) and (max-width:975px) {
     body{
         background-color: hsl(0, 0%, 98%);
         width:100%;
